--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,6 +22,7 @@
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/account_et"
             android:hint="请输入账号"
+            android:text="15105013004"
             style="@style/InputStyle" />
 
     </LinearLayout>
@@ -40,6 +41,7 @@
             android:id="@+id/pwd_et"
             android:hint="请输入密码"
             android:inputType="text"
+            android:text="123456"
             style="@style/InputStyle" />
 
     </LinearLayout>
