--- a/app/src/main/res/layout/item_window.xml
+++ b/app/src/main/res/layout/item_window.xml
@@ -18,15 +18,10 @@
             android:layout_width="0dp"
             android:layout_height="0dp">
 
-            <com.ook.android.ikPlayer.VcsPlayerGlTextureView
+            <com.ook.android.ikPlayer.VcsPlayerGlSurfaceView
                 android:id="@+id/gl_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
-
-<!--                    <TextureView-->
-<!--                        android:id="@+id/item_texture"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="match_parent" />-->
 
             <TextView
                 android:id="@+id/self_close_tv"
@@ -78,7 +73,6 @@
 
             <Button
                 android:id="@+id/close_video_btn"
-                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:text="关闭视频"/>
