--- a/app/src/main/res/layout/layout_board.xml
+++ b/app/src/main/res/layout/layout_board.xml
@@ -1,40 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/boardCl"
+    android:id="@+id/boardFl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.WelcomeActivity">
 
-    <WebView
-        android:id="@+id/webView"
+    <com.freewind.vcs.board.DrawFrameLayout
+        android:id="@+id/drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
     <Button
-        android:id="@+id/toggleToolBtn"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="显隐工具栏"/>
-
-    <Button
         android:id="@+id/bgBtn"
-        app:layout_constraintEnd_toEndOf="@+id/toggleToolBtn"
-        app:layout_constraintTop_toBottomOf="@+id/toggleToolBtn"
+        android:layout_gravity="end"
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="设置背景图片"/>
 
     <Button
         android:id="@+id/closeBoardBtn"
-        app:layout_constraintEnd_toEndOf="@+id/toggleToolBtn"
-        app:layout_constraintTop_toBottomOf="@+id/bgBtn"
+        android:layout_gravity="end"
+        android:layout_marginTop="70dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="关闭白板"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
