--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,14 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <!-- 横分割线 -->
+    <style name="divider_line_horizontal">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">#ddd</item>
+    </style>
+
+
     <style name="TransAct" parent="Theme.AppCompat.Light.NoActionBar">
 <!--        <item name="android:windowBackground">@android:color/transparent</item>-->
 <!--        <item name="android:windowNoTitle">true</item>-->
@@ -30,5 +38,14 @@
 <!--        <item name="android:windowContentOverlay">@null</item>-->
     </style>
 
+    <style name="MyCustomDialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
 
 </resources>
