--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -55,6 +55,7 @@
                 android:hint="请输验证码"
                 android:layout_width="0dp"
                 android:layout_weight="1"
+                android:text="8888"
                 style="@style/InputStyle" />
 
             <Button
@@ -64,7 +65,6 @@
                 android:text="获取验证码"/>
 
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_marginTop="10dp"
@@ -79,6 +79,7 @@
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/register_pwd_et"
                 android:hint="请输您的密码"
+                android:inputType="text"
                 style="@style/InputStyle" />
 
         </LinearLayout>
