vcs:1.2.5-39版本 demo

--- a/app/src/main/res/layout/activity_meeting.xml
+++ b/app/src/main/res/layout/activity_meeting.xml
@@ -7,7 +7,7 @@
     android:id="@+id/root"
     tools:context=".activity.MeetingActivity">
 
-    <com.ook.android.ikPlayer.VcsPlayerGlSurfaceView
+    <com.ook.android.ikPlayer.VcsPlayerGlTextureView
         android:id="@+id/cameraTextureView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
