--- a/app/src/main/res/layout/item_window.xml
+++ b/app/src/main/res/layout/item_window.xml
@@ -18,7 +18,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp">
 
-            <com.ook.android.ikPlayer.VcsPlayerGlSurfaceView
+            <com.ook.android.ikPlayer.VcsPlayerGlTextureView
                 android:id="@+id/gl_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
